; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_onion.c_kill_onion.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_onion.c_kill_onion.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@NET_PACKET_ONION_SEND_INITIAL = common dso_local global i32 0, align 4
@NET_PACKET_ONION_SEND_1 = common dso_local global i32 0, align 4
@NET_PACKET_ONION_SEND_2 = common dso_local global i32 0, align 4
@NET_PACKET_ONION_RECV_3 = common dso_local global i32 0, align 4
@NET_PACKET_ONION_RECV_2 = common dso_local global i32 0, align 4
@NET_PACKET_ONION_RECV_1 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @kill_onion(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %3 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %4 = icmp eq %struct.TYPE_4__* %3, null
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  br label %39

6:                                                ; preds = %1
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @NET_PACKET_ONION_SEND_INITIAL, align 4
  %11 = call i32 @networking_registerhandler(i32 %9, i32 %10, i32* null, i32* null)
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @NET_PACKET_ONION_SEND_1, align 4
  %16 = call i32 @networking_registerhandler(i32 %14, i32 %15, i32* null, i32* null)
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* @NET_PACKET_ONION_SEND_2, align 4
  %21 = call i32 @networking_registerhandler(i32 %19, i32 %20, i32* null, i32* null)
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* @NET_PACKET_ONION_RECV_3, align 4
  %26 = call i32 @networking_registerhandler(i32 %24, i32 %25, i32* null, i32* null)
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = load i32, i32* @NET_PACKET_ONION_RECV_2, align 4
  %31 = call i32 @networking_registerhandler(i32 %29, i32 %30, i32* null, i32* null)
  %32 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = load i32, i32* @NET_PACKET_ONION_RECV_1, align 4
  %36 = call i32 @networking_registerhandler(i32 %34, i32 %35, i32* null, i32* null)
  %37 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %38 = call i32 @free(%struct.TYPE_4__* %37)
  br label %39

39:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @networking_registerhandler(i32, i32, i32*, i32*) #1

declare dso_local i32 @free(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
